fixed home background not set to scale to full page on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,8 +16,12 @@ body {
 }
 
 .home-bg {
-    background: url('./images/home-bg.jpg') no-repeat;
-    background-position: top center;
+    background: url('./images/home-bg.jpg') no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
 }
 
 .contact-bg {
